@@ -47,13 +47,13 @@ namespace OrthancPlugins
 
     // note: if you add new DICOMWeb routes here, add them in the DefaultConfiguration.json too
     dicomWebStudies_ = boost::regex(
-      "^" + tmp + "/studies/([.0-9]+)(|/series|/metadata|/instances)(|/)$");
+      "^" + tmp + "/studies/([.0-9]+)(|/series|/metadata|/instances|/rendered|/thumbnail)(|/)$");
       
     dicomWebSeries_ = boost::regex(
-      "^" + tmp + "/studies/([.0-9]+)/series/([.0-9]+)(|/instances|/rendered|/metadata)(|/)$");
+      "^" + tmp + "/studies/([.0-9]+)/series/([.0-9]+)(|/instances|/rendered|/thumbnail|/metadata)(|/)$");
       
     dicomWebInstances_ = boost::regex(
-      "^" + tmp + "/studies/([.0-9]+)/series/([.0-9]+)/instances/([.0-9]+)(|/|/frames/.*|/rendered|/metadata|/bulk/.*)(|/)$");
+      "^" + tmp + "/studies/([.0-9]+)/series/([.0-9]+)/instances/([.0-9]+)(|/|/frames/.*|/rendered|/thumbnail|/metadata|/bulk/.*)(|/)$");
 
     dicomWebQidoRsFind_ = boost::regex(
       "^" + tmp + "/(studies|series|instances)(|/)$");
