@@ -1,3 +1,9 @@
+Pending changes
+===============
+
+* Added support for /dicom-web/studies/../thumbnail.
+
+
 2025-04-01 - v 0.9.1
 ====================
 
